# life_studies

./: buy_car.py  pyproject.toml
house_payment/: buy_house.py  utils.py
